# multimedia_camera_standard

./: OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  hisysevent.yaml  ohos.build
frameworks/innerkitsimpl/camera/: BUILD.gn
frameworks/innerkitsimpl/camera/include/: camera_device.h  camera_impl.h  camera_manager.h  camera_service.h  camera_service_callback.h  hal_display.h  hal_media.h
frameworks/innerkitsimpl/camera/src/: camera_ability.cpp  camera_config.cpp  camera_device.cpp  camera_impl.cpp  camera_kit.cpp  camera_manager.cpp  camera_service.cpp  event_handler.cpp  frame_config.cpp
frameworks/innerkitsimpl/camera/src/input/: camera_info.cpp  camera_input.cpp  camera_manager.cpp
frameworks/innerkitsimpl/camera/src/output/: capture_output.cpp  photo_output.cpp
frameworks/innerkitsimpl/camera/src/session/: capture_session.cpp
frameworks/innerkitsimpl/camera/test/: BUILD.gn
frameworks/innerkitsimpl/camera/test/include/: camera_framework_test.h
frameworks/innerkitsimpl/camera/test/moduletest/: BUILD.gn
frameworks/innerkitsimpl/camera/test/moduletest/include/: camera_framework_moduletest.h
frameworks/innerkitsimpl/camera/test/moduletest/src/: camera_framework_moduletest.cpp
frameworks/innerkitsimpl/camera/test/src/: camera_framework_test.cpp
frameworks/innerkitsimpl/camera/test/unittest/: BUILD.gn
frameworks/innerkitsimpl/camera/test/unittest/include/: camera_framework_test.h
frameworks/innerkitsimpl/camera/test/unittest/src/: camera_framework_test.cpp  camera_framework_unittest.cpp
frameworks/innerkitsimpl/metadata/test/: BUILD.gn
frameworks/innerkitsimpl/metadata/test/include/: camera_metadata_test.h
frameworks/innerkitsimpl/metadata/test/src/: camera_metadata_test.cpp
frameworks/innerkitsimpl/metadata/test/unittest/: BUILD.gn
frameworks/innerkitsimpl/metadata/test/unittest/include/: camera_metadata_test.h
frameworks/innerkitsimpl/metadata/test/unittest/src/: camera_metadata_test.cpp  camera_metadata_unittest.cpp
frameworks/native/camera/: BUILD.gn
frameworks/native/camera/src/input/: camera_info.cpp  camera_input.cpp  camera_manager.cpp
frameworks/native/camera/src/output/: capture_output.cpp  metadata_output.cpp  photo_output.cpp  preview_output.cpp  video_output.cpp
frameworks/native/camera/src/session/: capture_session.cpp
frameworks/native/camera/test/: BUILD.gn
frameworks/native/camera/test/moduletest/: BUILD.gn
frameworks/native/camera/test/moduletest/include/: camera_framework_moduletest.h
frameworks/native/camera/test/unittest/: BUILD.gn
frameworks/native/metadata/: BUILD.gn
frameworks/native/metadata/include/: camera_device_ability_items.h  camera_metadata_info.h  camera_metadata_item_info.h  camera_metadata_operator.h  metadata_log.h  metadata_utils.h
frameworks/native/metadata/src/: camera_metadata_info.cpp  camera_metadata_operator.cpp  metadata_sample.cpp  metadata_utils.cpp
frameworks/native/metadata/test/: BUILD.gn
frameworks/native/metadata/test/unittest/: BUILD.gn
interfaces/inner_api/native/test/: BUILD.gn  camera_capture.cpp  camera_capture_video.cpp  camera_capture_video.h  camera_video.cpp  test_common.cpp  test_common.h
interfaces/innerkits/native/test/: BUILD.gn  camera_capture.cpp  camera_capture_video.cpp  camera_capture_video.h  camera_preview.cpp  camera_sample.cpp  camera_video.cpp  test_common.cpp  test_common.h
interfaces/kits/js/camera_napi/: @ohos.multimedia.camera.d.ts  BUILD.gn
interfaces/kits/js/camera_napi/include/: camera_napi.h  camera_napi_utils.h  native_module_ohos_camera.h
sa_profile/: 3008.xml  (+1 more)
services/camera_service/: BUILD.gn
services/camera_service/binder/base/include/: icamera_device_service.h  icamera_device_service_callback.h  icamera_service.h  icamera_service_callback.h  icapture_session.h  icapture_session_callback.h  istream_capture.h  istream_capture_callback.h  istream_common.h  istream_metadata.h  istream_repeat.h  istream_repeat_callback.h  remote_request_code.h
services/camera_service/binder/client/include/: hcamera_device_callback_proxy.h  hcamera_device_proxy.h  hcamera_listener_proxy.h  hcamera_service_callback_proxy.h  hcamera_service_proxy.h  hcapture_session_callback_proxy.h  hcapture_session_proxy.h  hstream_capture_callback_proxy.h  hstream_capture_proxy.h  hstream_metadata_proxy.h  hstream_repeat_callback_proxy.h  hstream_repeat_proxy.h
services/camera_service/binder/client/src/: hcamera_device_callback_proxy.cpp  hcamera_device_proxy.cpp  hcamera_listener_proxy.cpp  hcamera_service_callback_proxy.cpp  hcamera_service_proxy.cpp  hcapture_session_callback_proxy.cpp  hcapture_session_proxy.cpp  hstream_capture_callback_proxy.cpp  hstream_capture_proxy.cpp  hstream_metadata_proxy.cpp  hstream_repeat_callback_proxy.cpp  hstream_repeat_proxy.cpp
services/camera_service/binder/server/include/: hcamera_device_callback_stub.h  hcamera_device_stub.h  hcamera_listener_stub.h  hcamera_service_callback_stub.h  hcamera_service_stub.h  hcapture_session_callback_stub.h  hcapture_session_stub.h  hstream_capture_callback_stub.h  hstream_capture_stub.h  hstream_metadata_stub.h  hstream_repeat_callback_stub.h  hstream_repeat_stub.h
services/camera_service/binder/server/src/: hcamera_device_callback_stub.cpp  hcamera_device_stub.cpp  hcamera_listener_stub.cpp  hcamera_service_callback_stub.cpp  hcamera_service_stub.cpp  hcapture_session_callback_stub.cpp  hcapture_session_stub.cpp  hstream_capture_callback_stub.cpp  hstream_capture_stub.cpp  hstream_metadata_stub.cpp  hstream_repeat_callback_stub.cpp  hstream_repeat_stub.cpp
services/camera_service/include/: camera_log.h  camera_util.h  hcamera_device.h  hcamera_host_manager.h  hcamera_service.h  hcapture_session.h  hstream_capture.h  hstream_common.h  hstream_metadata.h  hstream_repeat.h  media_log.h  permission_status_change_cb.h
services/camera_service/src/: camera_util.cpp  hcamera_device.cpp  hcamera_host_manager.cpp  hcamera_service.cpp  hcapture_session.cpp  hstream_capture.cpp  hstream_common.cpp  hstream_metadata.cpp  hstream_repeat.cpp  permission_status_change_cb.cpp
(+136 files in other folders)
