# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("metadata") {
  install_enable = true
  sources = [
    "src/camera_metadata_info.cpp",
    "src/camera_metadata_operator.cpp",
    "src/metadata_utils.cpp",
  ]
  cflags = [
    "-fPIC",
    "-Wall",
  ]
  cflags_cc = cflags
  include_dirs = [ "//foundation/multimedia/camera_standard/frameworks/native/metadata/include" ]
  deps = [ "//utils/native/base:utils" ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
  ]
  part_name = "multimedia_camera_standard"
  subsystem_name = "multimedia"
}

ohos_executable("metadata_sample") {
  install_enable = false
  sources = [ "src/metadata_sample.cpp" ]
  cflags = [ "-Wall" ]
  cflags_cc = cflags
  include_dirs = [ "//foundation/multimedia/camera_standard/frameworks/native/metadata/include" ]

  deps = [ "//foundation/multimedia/camera_standard/frameworks/native/metadata:metadata" ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  part_name = "multimedia_camera_standard"
  subsystem_name = "multimedia"
}
