# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "camera_standard/camera_metadata"

group("camerametadatatest") {
    testonly = true

    deps = [
        ":camera_metadata_test",
    ]
}

ohos_moduletest("camera_metadata_test") {
  module_out_path = module_output_path
  include_dirs = [
    "./include",
    "//foundation/multimedia/camera_standard/frameworks/innerkitsimpl/metadata/include",
  ]

  sources = [ "src/camera_metadata_test.cpp" ]

  deps = [
    "//foundation/multimedia/camera_standard/frameworks/innerkitsimpl/metadata:metadata",
  ]

  external_deps = [ "ipc:ipc_core" ]
}
