# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_executable("camera_sample") {
  install_enable = false
  sources = [ "camera_sample.cpp" ]
  cflags = [ "-Wall" ]
  cflags_cc = cflags
  include_dirs = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include/",
    "//drivers/peripheral/codec/interfaces/include",
    "//drivers/peripheral/display/interfaces/include",
    "//foundation/graphic/standard/frameworks/surface/include",
    "//foundation/graphic/standard/interfaces/kits/surface",
    "//foundation/graphic/standard/window_manager/include",
    "//foundation/multimedia/camera_standard/frameworks/innerkitsimpl/camera/include",
    "//foundation/multimedia/camera_standard/interfaces/innerkits/native/include",
    "//utils/native/base/include",
  ]

  deps = [
    "//foundation/graphic/standard:libwms_client",
    "//foundation/multimedia/camera_standard/frameworks/innerkitsimpl/camera:camera",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ipc:ipc_core",
    "multimedia_media_standard:recorder",
  ]

  part_name = "multimedia_camera_standard"
  subsystem_name = "multimedia"
}
